--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#00BCD4</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
+    <color name="negativemood">#ef9a9a</color>
+    <color name="neutralmood">#e6ee9c</color>
+    <color name="positivemood">#b9f6ca</color>
 </resources>
