--- a/app/src/main/res/layout/diarycards.xml
+++ b/app/src/main/res/layout/diarycards.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
 
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -17,6 +18,10 @@
         android:layout_alignParentStart="true"
         android:id="@+id/diarycard"
         app:cardCornerRadius="4dp"
+
+        card_view:cardUseCompatPadding="true"
+        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="3dp"
 
         >
 
