--- a/app/src/main/res/layout/activity_display_diary.xml
+++ b/app/src/main/res/layout/activity_display_diary.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_display_diary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="apps.everythingforward.com.wellnessdiary.DisplayDiary"
-   >
+    tools:context="apps.everythingforward.com.wellnessdiary.DisplayDiary">
 
     <TextView
         android:text="Your Diary"
@@ -39,4 +39,14 @@
 
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <com.gc.materialdesign.views.ButtonFloatSmall
+        android:id="@+id/buttonFloatSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#1E88E5"
+        
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="14dp" />
 </RelativeLayout>
