--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar1"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:fitsSystemWindows="true"
         >
         <android.support.v7.widget.Toolbar
@@ -38,7 +38,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/scrollView"
         >
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/howdoyoufeel"
             android:textSize="15sp"
-            android:text="Descripbe your day and feelings in your own words."
+            android:text="Describe your day and feelings in your own words."
             android:gravity="center"
             android:textColor="@color/secondaryText"
             android:id="@+id/describedaytv"/>
