--- a/app/src/main/res/layout/diarycards.xml
+++ b/app/src/main/res/layout/diarycards.xml
@@ -44,8 +44,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorAccent"
-            android:layout_below="@+id/diarytime"
+            android:background="#bdbdbd"
+            android:layout_below="@+id/sentimentvalue"
             />
 
             <TextView
