--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_statistics"
     android:layout_width="match_parent"
@@ -22,21 +23,47 @@
         android:textSize="18sp"/>
 
     <TextView
-        android:text="TextView"
+        android:text="Standard Deviation of Emotions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Mean Emotion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="49dp"
+        android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="47dp"
-        android:id="@+id/textView5" />
+        android:layout_alignParentStart="true" />
+
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+
+        android:id="@+id/graphIMG"
+        android:layout_above="@+id/saveToDiaryButton"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="25dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_marginTop="63dp"
-        android:id="@+id/textView6" />
+        android:layout_above="@+id/textView6"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/meanemotionTV" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/stddevTV" />
 </RelativeLayout>
