--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,16 @@
 
                  />
 
+            <com.gc.materialdesign.views.ButtonFlat
+                android:id="@+id/PickManually"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#1E88E5"
+                android:text="Manual Entry"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="15dp" />
+
 
         </RelativeLayout>
 
