--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -4,10 +4,29 @@
     android:id="@+id/activity_feed"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="16dp"
+
+    android:background="#FAFAFA"
     tools:context="apps.everythingforward.com.wellnessdiary.FeedActivity">
+
+    <TextView
+        android:id="@+id/feedTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#1E88E5"
+        android:text="Your Feed"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+
+        android:textSize="18sp"/>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/feedTV"
+        android:id="@+id/feedRV"
+        android:paddingTop="16dp"/>
+
 
 </RelativeLayout>
