--- a/app/src/main/res/layout/activity_display_diary.xml
+++ b/app/src/main/res/layout/activity_display_diary.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView"
         android:minHeight="25dp"
         android:textSize="25sp"
-        android:textColor="@color/primaryText"/>
+        android:textColor="@color/titlecolor"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
