--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="apps.everythingforward.com.wellnessdiary.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logout_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/logout_option"
         app:showAsAction="never" />
 </menu>
