--- a/app/src/main/res/layout/activity_manual_entry.xml
+++ b/app/src/main/res/layout/activity_manual_entry.xml
@@ -29,15 +29,35 @@
         android:layout_centerInParent="true"
         app:np_width="64dp"
         app:np_height="180dp"
-        app:np_dividerColor="@color/colorPrimary"
+        app:np_dividerColor="@color/titlecolor"
         app:np_max="59"
         app:np_min="0"
-        app:np_selectedTextColor="@color/colorPrimary"
+        app:np_selectedTextColor="#c62828"
         app:np_textColor="@color/colorPrimary"
         app:np_textSize="12sp"
 
         app:np_value="3" />
 
+
+    <com.gc.materialdesign.views.ButtonFlat
+        android:id="@+id/submitmanualentry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#1E88E5"
+        android:text="Submit"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="29dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:id="@+id/feelingsET"
+        android:layout_above="@+id/submitmanualentry"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="41dp"
+        android:hint="Diary Entry"/>
 
 
 </RelativeLayout>
