--- a/app/src/main/res/layout/activity_feed_item.xml
+++ b/app/src/main/res/layout/activity_feed_item.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_feed_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="apps.everythingforward.com.wellnessdiary.FeedItemActivity">
 
-</RelativeLayout>
+
+    tools:context="apps.everythingforward.com.wellnessdiary.FeedItemActivity"
+    android:weightSum="3"
+    android:orientation="vertical">
+
+
+    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/itemImage"
+        />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/itemContent"
+        android:padding="10dp"/>
+
+    </ScrollView>
+
+</LinearLayout>
