--- a/app/src/main/res/layout/activity_search_therapists.xml
+++ b/app/src/main/res/layout/activity_search_therapists.xml
@@ -4,10 +4,30 @@
     android:id="@+id/activity_search_therapists"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="apps.everythingforward.com.wellnessdiary.SearchTherapists">
+    tools:context="apps.everythingforward.com.wellnessdiary.SearchTherapists"
+    android:background="#FAFAFA">
+
+        <TextView
+            android:id="@+id/connectTherapistsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#1E88E5"
+            android:text="Connect with Therapists"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:minHeight="25dp"
+            android:textSize="25sp"
+
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:paddingTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/connectTherapistsTV"
+            android:id="@+id/connectTherapistsRV"/>
 
 </RelativeLayout>
