--- a/app/src/main/res/layout/therapistitem.xml
+++ b/app/src/main/res/layout/therapistitem.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="5">
+    >
 
     <LinearLayout
         android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="5">
+        android:weightSum="5"
+        android:id="@+id/itemID">
     
     <ImageView
         android:id="@+id/therapistImage"
