--- a/app/src/main/res/layout/therapistitem.xml
+++ b/app/src/main/res/layout/therapistitem.xml
@@ -14,8 +14,9 @@
         android:id="@+id/therapistImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3.5"
-        android:minHeight="150dp"
+        android:layout_weight="3"
+        android:minHeight="75dp"
+        android:layout_gravity="left"
         />
     
     <TextView
@@ -23,7 +24,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1.5"
+        android:layout_weight="2"
+        android:textSize="15sp"
+        android:textColor="@color/primaryText"
+        android:textAllCaps="true"
+
 
         />
 
@@ -31,7 +36,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/colorAccent"
         android:layout_gravity="bottom"
         />
