--- a/app/src/main/res/layout/therapistitem.xml
+++ b/app/src/main/res/layout/therapistitem.xml
@@ -1,47 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
 
-    <LinearLayout
-        android:orientation="horizontal" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="5"
-        android:id="@+id/itemID">
-    
-    <ImageView
+
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/button_action_touch"
         android:id="@+id/therapistImage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:minHeight="75dp"
-        android:layout_gravity="left"
-        />
-    
-    <TextView
-        android:id="@+id/therapistName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="2"
-        android:textSize="15sp"
-        android:textColor="@color/primaryText"
-        android:textAllCaps="true"
-
-
         />
 
-        </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorAccent"
-        android:layout_gravity="bottom"
-        />
+        android:layout_alignBottom="@id/therapistImage"
+
+         />
+
+    <TextView
+        android:id="@+id/therapistName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
 
+        android:textSize="15sp"
+        android:textColor="@color/primaryText"
+        android:textAllCaps="true"
+        android:textAlignment="center"
 
 
-</LinearLayout>
+        android:layout_marginStart="17dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/therapistImage" />
+
+
+</RelativeLayout>
