--- a/app/src/main/res/layout/therapistitem.xml
+++ b/app/src/main/res/layout/therapistitem.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relLayout">
 
 
 
@@ -37,6 +39,15 @@
         android:layout_marginStart="17dp"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/therapistImage" />
+
+    <com.like.LikeButton
+        app:icon_type="heart"
+        app:icon_size="15dp"
+        android:id="@+id/star_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
