--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:minHeight="25dp"
-        android:textSize="25sp"
+        android:textSize="18sp"
+        android:textAllCaps="true"
 
         />
 
@@ -29,6 +30,13 @@
         android:layout_below="@id/feedTV"
         android:id="@+id/feedRV"
         android:paddingTop="16dp"/>
+
+    <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
+        android:id="@+id/progressBarCircularIndeterminate"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="#1E88E5"
+        android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
