--- a/app/src/main/res/layout/activity_search_therapists.xml
+++ b/app/src/main/res/layout/activity_search_therapists.xml
@@ -14,11 +14,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#1E88E5"
-            android:text="Connect"
+            android:text="Find Therapists"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:minHeight="25dp"
-            android:textSize="25sp"
+
+            android:textSize="18sp"
             android:textAllCaps="true"
 
             />
@@ -30,5 +30,12 @@
             android:layout_height="match_parent"
             android:layout_below="@id/connectTherapistsTV"
             android:id="@+id/connectTherapistsRV"/>
+
+        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
+            android:id="@+id/progressBarCircularIndeterminate"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="#1E88E5"
+            android:layout_centerInParent="true"/>
 
 </RelativeLayout>
