--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/logout_option"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/about_app"
+        android:orderInCategory="100"
+        android:title="About Application"
+        app:showAsAction="never" />
 </menu>
